# python-rabbitmq

./: README.md  consumer.py  publisher.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
